--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -8,36 +8,11 @@
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Sen Article</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
-                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <form class="d-flex mt-3" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+                
             </div>
         </div>
     </div>
@@ -47,7 +22,7 @@
 <h1 class="text-center mt-5 text-dark py-5 ">📝Liste des articles</h1>
 <!-- card bootstrap -->
 <div class="container mt-5">
-    <div class="d-flex justify-content-between mb-5">
+    <div class="d-flex justify-content-between mb-5" style="height: 40px;">
         <div class="col-md-6">
             <!-- boutton ajouter et corbeille -->
             <button type="button" class="btn text-white mb-5 fw-bold btn-article"  data-bs-toggle="modal" data-bs-target="#modalAjoutArticle">Ajouter</button>
@@ -70,27 +45,22 @@
                             <button type="button" class="btn btn-sm btn-outline-info">Detail</button>
                             <button type="button" class="btn btn-sm btn-outline-info">Modifier</button>
                         </div>
-                        <small class="text-muted">9 mins</small>
+                        <small class="text-muted">{{article.userId}}</small>
                     </div>
                 </div>
             </div>
         </div>
         <div class="col">
             <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
-                    role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-                        dy=".3em">Thumbnail</text>
-                </svg>
-    
+                <img src="https://img.freepik.com/photos-gratuite/belle-jeune-femme-se-promene-dans-paris-concept-photo-voyage-heureuse_1321-3494.jpg"
+                    alt="Description de l'image" class="img-article">
+        
                 <div class="card-body">
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
+                    <p class="card-text">{{article.body}}</p>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                            <button type="button" class="btn btn-sm btn-outline-info">Detail</button>
+                            <button type="button" class="btn btn-sm btn-outline-info">Modifier</button>
                         </div>
                         <small class="text-muted">9 mins</small>
                     </div>
@@ -99,20 +69,15 @@
         </div>
         <div class="col">
             <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
-                    role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-                        dy=".3em">Thumbnail</text>
-                </svg>
-    
+                <img src="https://img.freepik.com/photos-gratuite/belle-jeune-femme-se-promene-dans-paris-concept-photo-voyage-heureuse_1321-3494.jpg"
+                    alt="Description de l'image" class="img-article">
+        
                 <div class="card-body">
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
+                    <p class="card-text">{{article.body}}</p>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                            <button type="button" class="btn btn-sm btn-outline-info">Detail</button>
+                            <button type="button" class="btn btn-sm btn-outline-info">Modifier</button>
                         </div>
                         <small class="text-muted">9 mins</small>
                     </div>
@@ -134,23 +99,23 @@
                 <form>
                     <div class="mb-4">
                         <label for="inputImage" class="form-label fw-bold">Image</label>
-                        <input type="text" name="image" class="form-control" id="inputImage" placeholder="Entrez l'url d'une image">
+                        <input type="text" name="imageUrl" class="form-control" id="inputImage" placeholder="Entrez l'url d'une image" [(ngModel)]="imageUrl">
                     </div>
                     <div class="mb-4">
                         <label for="inputTitre" class="form-label fw-bold">Titre</label>
-                        <input type="text" name="titre" class="form-control" id="inputTitre" placeholder="Entrez le titre">
+                        <input type="text" name="titre" class="form-control" id="inputTitre" placeholder="Entrez le titre" [(ngModel)]="titre">
                     </div>
                     <div class="mb-4">
                         <label for="inputDescription" class="form-label fw-bold">Description</label>
                         <div class="form-floating">
-                            <textarea class="form-control" placeholder="description" name="description" id="description"></textarea>
+                            <textarea class="form-control" placeholder="description" name="description" id="description" [(ngModel)]="description"></textarea>
                         </div>
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-corbeille  text-white" data-bs-dismiss="modal">Annuler</button>
-                <button type="button" class="btn btn-article text-white ">Ajouter</button>
+                <button type="button" class="btn btn-article text-white" (click)="ajouterArticle()">Ajouter</button>
             </div>
         </div>
     </div>
