--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -33,50 +33,18 @@
             <button class="input-group-text notactive"><i class="bi bi-search"></i></button>
         </div>
     </div>
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 mb-5" *ngFor="let article of articles">
-        <div class="col">
-            <div class="card shadow-sm">
-                <img src="https://img.freepik.com/photos-gratuite/belle-jeune-femme-se-promene-dans-paris-concept-photo-voyage-heureuse_1321-3494.jpg" alt="Description de l'image" class="img-article">
+    <div class="row row-gap-4">
+        <div class="col-md-4 col-12 " *ngFor="let article of articles">
+            <div class="card shadow-sm" style="max-height: 450px; min-height: 450px;">
+                <img src="https://img.freepik.com/photos-gratuite/belle-jeune-femme-se-promene-dans-paris-concept-photo-voyage-heureuse_1321-3494.jpg"
+                    alt="Description de l'image" class="img-article">
+                <h6 class="card-title text-center fw-bold">{{article.title}}</h6>
+                <div class="card-body">
+                    <p class="card-text">{{article.body}}</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
 
-                <div class="card-body">
-                    <p class="card-text">{{article.body}}</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-info">Detail</button>
-                            <button type="button" class="btn btn-sm btn-outline-info">Modifier</button>
-                        </div>
-                        <small class="text-muted">{{article.userId}}</small>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card shadow-sm">
-                <img src="https://img.freepik.com/photos-gratuite/belle-jeune-femme-se-promene-dans-paris-concept-photo-voyage-heureuse_1321-3494.jpg"
-                    alt="Description de l'image" class="img-article">
-        
-                <div class="card-body">
-                    <p class="card-text">{{article.body}}</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-info">Detail</button>
-                            <button type="button" class="btn btn-sm btn-outline-info">Modifier</button>
-                        </div>
-                        <small class="text-muted">9 mins</small>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card shadow-sm">
-                <img src="https://img.freepik.com/photos-gratuite/belle-jeune-femme-se-promene-dans-paris-concept-photo-voyage-heureuse_1321-3494.jpg"
-                    alt="Description de l'image" class="img-article">
-        
-                <div class="card-body">
-                    <p class="card-text">{{article.body}}</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-info">Detail</button>
+                            <button type="button" class="btn btn-sm btn-outline-info"  routerLink="/details-article" >Détail</button>
                             <button type="button" class="btn btn-sm btn-outline-info">Modifier</button>
                         </div>
                         <small class="text-muted">9 mins</small>
