--- a/src/app/corbeille/corbeille.component.html
+++ b/src/app/corbeille/corbeille.component.html
@@ -1,4 +1,4 @@
-<section class="ftco-section">
+<section class="ftco-section"  *ngIf="formChoice">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
@@ -42,7 +42,7 @@
     </div>
 </section>
 
-<section class="ftco-section" *ngIf="formChoice">
+<section class="ftco-section" *ngIf="!formChoice">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
