--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -12,7 +12,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
-                
+                <button class="btn btn-lg btn-info d-block m-0 btn-article">Se deconnecter</button>
             </div>
         </div>
     </div>
@@ -21,7 +21,7 @@
 <!-- titre -->
 <h1 class="text-center mt-5 text-dark py-5 ">📝Liste des articles</h1>
 <!-- card bootstrap -->
-<div class="container mt-5">
+<div class="container mt-5 mb-5">
     <div class="d-flex justify-content-between mb-5" style="height: 40px;">
         <div class="col-md-6">
             <!-- boutton ajouter et corbeille -->
@@ -33,58 +33,38 @@
             <button class="input-group-text notactive"><i class="bi bi-search"></i></button>
         </div>
     </div>
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 mb-5" *ngFor="let article of articles">
-        <div class="col">
-            <div class="card shadow-sm">
-                <img src="https://img.freepik.com/photos-gratuite/belle-jeune-femme-se-promene-dans-paris-concept-photo-voyage-heureuse_1321-3494.jpg" alt="Description de l'image" class="img-article">
-
-                <div class="card-body">
-                    <p class="card-text">{{article.body}}</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-info">Detail</button>
-                            <button type="button" class="btn btn-sm btn-outline-info">Modifier</button>
-                        </div>
-                        <small class="text-muted">{{article.userId}}</small>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card shadow-sm">
+    <div class="row row-gap-4">
+        <div class="col-md-4 col-12 " *ngFor="let article of getArticlesPage()">
+            <div class="card shadow-sm" style="max-height: 450px; min-height: 450px;">
                 <img src="https://img.freepik.com/photos-gratuite/belle-jeune-femme-se-promene-dans-paris-concept-photo-voyage-heureuse_1321-3494.jpg"
                     alt="Description de l'image" class="img-article">
-        
+                <h6 class="card-title text-center fw-bold">{{article.title}}</h6>
                 <div class="card-body">
                     <p class="card-text">{{article.body}}</p>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-info">Detail</button>
+                            <button type="button" class="btn btn-sm btn-outline-info">Détail</button>
                             <button type="button" class="btn btn-sm btn-outline-info">Modifier</button>
                         </div>
-                        <small class="text-muted">9 mins</small>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card shadow-sm">
-                <img src="https://img.freepik.com/photos-gratuite/belle-jeune-femme-se-promene-dans-paris-concept-photo-voyage-heureuse_1321-3494.jpg"
-                    alt="Description de l'image" class="img-article">
-        
-                <div class="card-body">
-                    <p class="card-text">{{article.body}}</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-info">Detail</button>
-                            <button type="button" class="btn btn-sm btn-outline-info">Modifier</button>
-                        </div>
-                        <small class="text-muted">9 mins</small>
+                        <button class="btn btn btn-sm btn-outline btn-sup" (click)="supprimerArticle(article)">supprimer</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
+
+<div class="d-flex justify-content-center my-5">
+    <button class="btn btnColor me-2" [disabled]="pageActuelle === 1" (click)="pageActuelle = pageActuelle - 1">
+        Précédent
+    </button>
+    <button class="btn btnColor ms-2" *ngFor="let page of pages" (click)="pageActuelle = page">
+        {{ page }}
+    </button>
+    <button class="btn btnColor ms-2" [disabled]="pageActuelle === totalPages"
+        (click)="pageActuelle = pageActuelle + 1">
+        Suivant
+    </button>
 </div>
 
 <!-- Modal -->
@@ -103,12 +83,12 @@
                     </div>
                     <div class="mb-4">
                         <label for="inputTitre" class="form-label fw-bold">Titre</label>
-                        <input type="text" name="titre" class="form-control" id="inputTitre" placeholder="Entrez le titre" [(ngModel)]="titre">
+                        <input type="text" name="titre" class="form-control" id="inputTitre" placeholder="Entrez le titre" [(ngModel)]="title">
                     </div>
                     <div class="mb-4">
                         <label for="inputDescription" class="form-label fw-bold">Description</label>
                         <div class="form-floating">
-                            <textarea class="form-control" placeholder="description" name="description" id="description" [(ngModel)]="description"></textarea>
+                            <textarea class="form-control" placeholder="description" name="description" id="description" [(ngModel)]="body"></textarea>
                         </div>
                     </div>
                 </form>
