--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -12,7 +12,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
-                
+
             </div>
         </div>
     </div>
@@ -43,7 +43,7 @@
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             <button type="button" class="btn btn-sm btn-outline-info">Detail</button>
-                            <button type="button" class="btn btn-sm btn-outline-info">Modifier</button>
+                            <button type="button" class="btn btn-sm btn-outline-info"  data-bs-toggle="modal" data-bs-target="#modalModifierArticle">Modifier</button>
                         </div>
                         <small class="text-muted">{{article.userId}}</small>
                     </div>
@@ -54,7 +54,7 @@
             <div class="card shadow-sm">
                 <img src="https://img.freepik.com/photos-gratuite/belle-jeune-femme-se-promene-dans-paris-concept-photo-voyage-heureuse_1321-3494.jpg"
                     alt="Description de l'image" class="img-article">
-        
+
                 <div class="card-body">
                     <p class="card-text">{{article.body}}</p>
                     <div class="d-flex justify-content-between align-items-center">
@@ -71,7 +71,7 @@
             <div class="card shadow-sm">
                 <img src="https://img.freepik.com/photos-gratuite/belle-jeune-femme-se-promene-dans-paris-concept-photo-voyage-heureuse_1321-3494.jpg"
                     alt="Description de l'image" class="img-article">
-        
+
                 <div class="card-body">
                     <p class="card-text">{{article.body}}</p>
                     <div class="d-flex justify-content-between align-items-center">
@@ -120,6 +120,39 @@
         </div>
     </div>
 </div>
+<div class="modal" tabindex="-1" id="modalModifierArticle">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Modifier l'article</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="mb-4">
+            <label for="inputImage" class="form-label fw-bold">Image</label>
+            <input type="text" name="imageUrl" class="form-control" id="inputImage" placeholder="Entrez l'url d'une image" [(ngModel)]="imageUrl">
+          </div>
+          <div class="mb-4">
+            <label for="inputTitre" class="form-label fw-bold">Titre</label>
+            <input type="text" name="titre" class="form-control" id="inputTitre" placeholder="Entrez le titre" [(ngModel)]="titre">
+          </div>
+          <div class="mb-4">
+            <label for="inputDescription" class="form-label fw-bold">Description</label>
+            <div class="form-floating">
+              <textarea class="form-control" placeholder="description" name="description" id="description" [(ngModel)]="description"></textarea>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-corbeille text-white" data-bs-dismiss="modal">Annuler</button>
+        <button type="button" class="btn btn-article text-white" (click)="modifierArticle()">Modifier</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <footer class="footer mt-auto py-3 mt-5">
     <div class="container text-center">
         <span class="text-light">Copyrights © 2023 powered by G-10. All Rights Reserved.</span>
