--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -44,7 +44,7 @@
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
 
-                            <button type="button" class="btn btn-sm btn-outline-info"  routerLink="/details-article" >Détail</button>
+                            <button type="button" class="btn btn-sm btn-outline-info" id="{{article.id}}" (click)="getIdArticles(article.id)">Détail</button>
                             <button type="button" class="btn btn-sm btn-outline-info">Modifier</button>
                         </div>
                         <small class="text-muted">9 mins</small>
