--- a/src/app/details-article/details-article.component.html
+++ b/src/app/details-article/details-article.component.html
@@ -1,4 +1,3 @@
-<!-- <p>details-article works!</p> -->
 <div class="container-detail">
     <h1 class="text-center mb-4">📃Details article 📃</h1>
     <div class="card mb-3" >
@@ -8,8 +7,8 @@
             </div>
             <div class="col-md-8">
             <div class="card-body">
-                <h5 class="card-title"></h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h6 class="card-title text-center fw-bold">{{articleFound.title}}</h6>
+                <p class="card-text">{{articleFound.body}}</p>
                 <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
             </div>
             </div>
