--- a/src/app/article/article.component.css
+++ b/src/app/article/article.component.css
@@ -18,3 +18,41 @@
     color: #FF9A9A;
     
 }
+
+/* Styles pour la pagination personnalisée */
+
+/* Conteneur de la pagination */
+.pagination-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+/* Styles pour les boutons */
+.pagination-button {
+    background-color: #0097b2;
+    color: white;
+    border: 1px solid #0097b2;
+    padding: 8px 12px;
+    margin: 0 2px;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.pagination-button.disabled {
+    background-color: #FF9A9A;
+    border-color: #FF9A9A;
+    cursor: not-allowed;
+}
+
+/* Style pour le bouton actuel */
+.pagination-button.active {
+    background-color: #FF9A9A;
+    border-color: #FF9A9A;
+}
+
+/* Animation de survol pour les boutons */
+.pagination-button:hover:not(.disabled) {
+    background-color: #007b8e;
+    border-color: #007b8e;
+}
