--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -43,8 +43,8 @@
                     <p class="card-text">{{article.body}}</p>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-info">Détail</button>
-                            <button type="button" class="btn btn-sm btn-outline-info" data-bs-toggle="modal" data-bs-target="#modalModifierArticle">Modifier</button>
+                            <button type="button" class="btn btn-sm btn-outline-info" id="{{article.id}}" (click)="getIdArticles(article.id)">Détail</button>
+                            <button type="button" class="btn btn-sm btn-outline-info" data-bs-toggle="modal" data-bs-target="#modalModifierArticle" (click)="chargerInfosArticle(article)">Modifier</button>
                         </div>
                         <button class="btn btn btn-sm btn-outline btn-sup" (click)="deleteArticle(article.id)">supprimer</button>
                     </div>
@@ -95,7 +95,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-corbeille  text-white" data-bs-dismiss="modal">Annuler</button>
-                <button type="button" class="btn btn-article text-white" (click)=" ajouterArticle()">Ajouter</button>
+                <button type="button" class="btn btn-article text-white" (click)=" ajouterArticle()" data-bs-dismiss="modal">Ajouter</button>
             </div>
         </div>
     </div>
@@ -132,7 +132,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-corbeille  text-white" data-bs-dismiss="modal">Annuler</button>
-                <button type="button" class="btn btn-article text-white" (click)=" ajouterArticle()">Ajouter</button>
+                <button type="button" class="btn btn-article text-white" data-bs-dismiss="modal" (click)="modifierArticle()" >Modifier</button>
             </div>
         </div>
     </div>
