--- a/src/app/details-article/details-article.component.html
+++ b/src/app/details-article/details-article.component.html
@@ -7,10 +7,20 @@
             </div>
             <div class="col-md-8">
             <div class="card-body">
-                <h6 class="card-title text-center fw-bold">{{articleFound.title}}</h6>
-                <p class="card-text">{{articleFound.body}}</p>
+                <h6 class="card-title text-center fw-bold">{{articleFound?.title}}</h6>
+                <p class="card-text">{{articleFound?.body}}</p>
                 <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
             </div>
+            </div>
+        </div>
+    </div>
+    <div class="comments container mt-5">
+        <h3>Liste des commentaires</h3>
+        <div>
+            <div class="mt-4 shadow-sm p-3 rounded" *ngFor="let comment of articleDetailsComments">
+                <p class="colorTitle" style="font-weight: bold;">Nom : {{ comment.name }}</p>
+                <p>Email : {{ comment.email || 'No email available' }}</p>
+                <p>Commentaire : {{ comment.body || 'No comment available' }}</p>
             </div>
         </div>
     </div>
